# demos-llms-agents

./: LICENSE  README.md
agentic-data-processor/: requirements.txt
agentic-data-processor/app/: app.py
agentic-data-processor/configs/: dbt_schema_config.yaml
agentic-data-processor/src/: agent_manager.py  file_loader.py  tool_registry.py
agentic-data-processor/tests/: test_file_loader.py
agentic_data_processor/: README.md
agentic_data_processor/configs/: agent_config.yaml
agentic_data_processor/notebooks/: experiments.ipynb
agentic_data_processor/src/: agent.py  config_loader.py  dbt_mapper.py  dw_loader.py  rag_loader.py  transformations.py
agentic_data_processor/tests/: test_transformations.py
storybot-eval-api/: Makefile  Pipfile  README.md
storybot-eval-api/api/: main.py  router.py  schemas.py
storybot-eval-api/data/: sample_conversation.json
storybot-eval-api/evaluation/: metrics_anomalies.py  metrics_basic.py  metrics_belief_shift.py  metrics_sentiment.py
storybot-eval-api/recommendation/: belief_indexer.py  recommender.py
storybot-eval-api/scripts/: send_nth_conversation.py  send_sample_request.py
storybot-eval-api/tests/: test_api.py  test_metrics_anomalies.py  test_metrics_basic.py  test_metrics_belief_shift.py  test_metrics_sentiment.py  test_recommender.py
storybot-eval-api/tmp/: pyproject.toml  sample_conversation.json
storybot-eval-api/utils/: nlp_tools.py  profiling.py
